[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Demon.gd" type="Script" id=1]
[ext_resource path="res://Animated_Sprite_Frames/Demon_Fire_spriteframes.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Animated_Sprite_Frames/Demon_spriteframes.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/BossSkeletonEnemyHealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 22.1433 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 29 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.7143, 37.1429 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 650.714, 81.4286 )

[node name="Demon" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="FireBreathArea2D" type="Area2D" parent="."]
position = Vector2( 7.14286, 11.4286 )
collision_layer = 8

[node name="FireBreathCollisionShape2D" type="CollisionShape2D" parent="FireBreathArea2D"]
position = Vector2( 115, 91.429 )
shape = SubResource( 1 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.211765, 0.0431373, 0.815686, 1 )
position = Vector2( 64, 43 )
scale = Vector2( 1, 0.875 )
frames = ExtResource( 3 )
animation = "continuous_attack"
frame = 1
playing = true

[node name="FireBreath" type="AnimatedSprite" parent="AnimatedSprite"]
position = Vector2( -76.8571, 52.898 )
frames = ExtResource( 2 )
playing = true

[node name="PortalLocation" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 91.7358, -0.684341 )
rotation = 1.5708

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 55, 73.5714 )
rotation = -1.5708
scale = Vector2( 35, 1 )
enabled = true
cast_to = Vector2( 0, 600 )

[node name="RightRayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 46.4286, 77.8571 )
rotation = 1.5708
scale = Vector2( 35, 1 )
enabled = true
cast_to = Vector2( 0, 700 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 60, 76 )
shape = SubResource( 2 )

[node name="HitReactArea2D" type="Area2D" parent="."]
modulate = Color( 0.0941176, 0.564706, 0.0117647, 1 )
collision_layer = 2
collision_mask = 16

[node name="HitReactCollisionShape2D" type="CollisionShape2D" parent="HitReactArea2D"]
position = Vector2( 61.4286, 74.2857 )
shape = SubResource( 3 )

[node name="BossSkeletonHealthBar" parent="." instance=ExtResource( 4 )]

[node name="BossArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
shape = SubResource( 4 )

[node name="TimerToModulate" type="Timer" parent="."]
wait_time = 0.15

[node name="KeyLocation" type="Position2D" parent="."]
position = Vector2( 174.286, 151.429 )
rotation = 1.5708
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="frame_changed" from="AnimatedSprite/FireBreath" to="." method="_on_FireBreath_frame_changed"]
[connection signal="area_entered" from="HitReactArea2D" to="." method="_on_HitReactArea2D_area_entered"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="body_exited" from="BossArea" to="." method="_on_BossArea_body_exited"]
[connection signal="timeout" from="TimerToModulate" to="." method="_on_TimerToModulate_timeout"]

[editable path="BossSkeletonHealthBar"]
